// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Switch" renders (dark theme) 1`] = `
<div
  className="css-1mc7zwm-StyledAppContainer"
>
  <div
    className="css-vlapzy-Switch"
  >
    <input
      checked={false}
      className="css-1mmu7i4-Switch"
      id="3"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="css-m9in6d-Switch"
      htmlFor="3"
    >
      <span
        className="css-edcbmt-Switch"
      />
      <span
        className="css-dm4yw9-Switch"
      />
    </label>
  </div>
</div>
`;

exports[`"Switch" renders checked 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <div
    className="css-vlapzy-Switch"
  >
    <input
      checked={true}
      className="css-1mmu7i4-Switch"
      id="2"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="css-m9in6d-Switch"
      htmlFor="2"
    >
      <span
        className="css-1cbbamx-Switch"
      />
      <span
        className="css-xjd1wz-Switch"
      />
    </label>
  </div>
</div>
`;

exports[`"Switch" renders disabled 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <div
    className="css-vlapzy-Switch"
  >
    <input
      checked={false}
      className="css-1mmu7i4-Switch"
      disabled={true}
      id="4"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="css-vjtkxv-Switch"
      htmlFor="4"
    >
      <span
        className="css-ryu7iu-Switch"
      />
      <span
        className="css-1ywitsw-Switch"
      />
    </label>
  </div>
</div>
`;

exports[`"Switch" renders unchecked 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <div
    className="css-vlapzy-Switch"
  >
    <input
      checked={false}
      className="css-1mmu7i4-Switch"
      id="1"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="css-m9in6d-Switch"
      htmlFor="1"
    >
      <span
        className="css-edcbmt-Switch"
      />
      <span
        className="css-dm4yw9-Switch"
      />
    </label>
  </div>
</div>
`;
